Switched to OpenJDK Nashorn, updated maven-war-plugin, removed duplicate org.infinispan